# RK2

./: CMakeLists.txt  LICENSE  build_and_test.sh
.github/workflows/: ci.yml
include/: monster.hpp
src/: monster.cpp
tests/: test_monster.cpp
